--- a/src/content/about.html
+++ b/src/content/about.html
@@ -19,6 +19,7 @@
       <dt>8.8</dt>
       <dd>Added Show hidden feature</dd>
       <dd>Updated code to process duplicate hostname:port (#33, #76)</dd>
+      <dd>Updated user interface to hide patterns on FoxyProxy Basic</dd>
 
       <dt>8.7</dt>
       <dd>Added Auto Backup feature</dd>
