--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <article>
-      <section class="show-js">
+      <section>
         <h1 data-i18n="extensionName"><img src="../image/icon.svg" alt=""> </h1>
 
         <div class="list">
