--- a/src/content/options.html
+++ b/src/content/options.html
@@ -70,8 +70,8 @@
         <label data-i18n="limitWebRTC"><input type="checkbox" id="limitWebRTC"></label>
         <p class="description" data-i18n="limitWebRTCDescription"></p>
 
-        <label data-i18n="showPatternProxy"><input type="checkbox" id="showPatternProxy"></label>
-        <p class="description" data-i18n="showPatternProxyDescription"></p>
+        <label class="firefox" data-i18n="showPatternProxy"><input type="checkbox" id="showPatternProxy"></label>
+        <p class="description firefox" data-i18n="showPatternProxyDescription"></p>
 
         <label data-i18n="container"></label>
         <p class="description" data-i18n="containerDescription"></p>
@@ -83,23 +83,23 @@
             <option value="">&nbsp;</option>
           </select>
 
-          <label><span data-i18n="container"></span> 1</label>
-          <select name="container-1">
+          <label class="firefox"><span data-i18n="container"></span> 1</label>
+          <select class="firefox" name="container-1">
             <option value="">&nbsp;</option>
           </select>
 
-          <label><span data-i18n="container"></span> 2</label>
-          <select name="container-2">
+          <label class="firefox"><span data-i18n="container"></span> 2</label>
+          <select class="firefox" name="container-2">
             <option value="">&nbsp;</option>
           </select>
 
-          <label><span data-i18n="container"></span> 3</label>
-          <select name="container-3">
+          <label class="firefox"><span data-i18n="container"></span> 3</label>
+          <select class="firefox" name="container-3">
             <option value="">&nbsp;</option>
           </select>
 
-          <label><span data-i18n="container"></span> 4</label>
-          <select name="container-4">
+          <label class="firefox"><span data-i18n="container"></span> 4</label>
+          <select class="firefox" name="container-4">
             <option value="">&nbsp;</option>
           </select>
 
@@ -142,7 +142,7 @@
     <!-- /user options -->
 
     <!-- proxy -->
-    <section class="proxySection show-js">
+    <section class="proxySection">
 
       <fieldset class="proxySection">
 
@@ -478,8 +478,8 @@
                 <button type="button" class="flat" data-i18n="view"></button>
               </span>
 
-              <label data-i18n="proxyDNS"></label>
-              <input type="checkbox" class="toggle" data-id="proxyDNS" checked>
+              <label class="firefox" data-i18n="proxyDNS"></label>
+              <input type="checkbox" class="toggle firefox" data-id="proxyDNS" checked>
 
 
             </div>
