--- a/src/content/options.html
+++ b/src/content/options.html
@@ -587,7 +587,7 @@
           <option value="wildcard" data-i18n="wildcard"></option>
           <option value="regex">Reg Exp</option>
         </select>
-        <input type="text" placeholder="*://*.example.com/">
+        <input type="text" placeholder="://*.example.com/">
 
         <label data-i18n="result"></label>
         <span class="test-result"></span>
