--- a/src/content/help.html
+++ b/src/content/help.html
@@ -480,8 +480,14 @@
       <li>Maximum number of items 512</li>
     </ul>
 
-    <p class="note">There is a discussion to increase the storage sync quota to 1MB.<br>
-      See also: <a href="https://github.com/w3c/webextensions/issues/351" target="_blank">Discuss limits applied to storage.local and storage.sync API</a></p>
+    <div class="note">
+      <p>There is a discussion to increase the storage sync quota to 1MB.</p>
+      <p>See also:</p>
+      <ul>
+        <li><a href="https://github.com/w3c/webextensions/issues/351" target="_blank">Discuss limits applied to storage.local and storage.sync API</a></li>
+        <li><a href="https://github.com/w3c/webextensions/issues/510">Proposal: Increase maximum item size in Storage sync quotas</a></li>
+      </ul>
+    </div>
 
     <h2 id="auto-backup">Auto Backup</h2>
     <p>Automatically backup settings to the browser configured Downloads folder on save</p>
@@ -763,6 +769,14 @@
 
       <dt>Proxy DNS <span>(Firefox only)</span></dt>
       <dd>Option to pass DNS to the SOCKS proxy when using SOCKS</dd>
+      <dd class="note">See also:
+        <ul>
+          <li><a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1741375" target="_blank">Proxy DNS by default when using SOCKS v5</a> has landed in Firefox 123</li>
+          <li><a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1799411" target="_blank">DNS leaks with proxy extension</a></li>
+          <li><a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1791243" target="_blank">Firefox queries DNS of Proxy destination</a></li>
+          <li><a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1867562" target="_blank">Despite the fact that DNS over HTTPS is switched off on Privacy and Security bar in Settings it still leaks my DNS</a></li>
+        </ul>
+      </dd>
 
       <dt>PAC URL <span>(not available on Android)</span></dt>
       <dd>Required for PAC type</dd>
