--- a/src/content/about.html
+++ b/src/content/about.html
@@ -14,12 +14,12 @@
 
   <article class="about">
 
-    <h1 id="changelog">Changelog</h1>
+    <h2 id="changelog">Changelog</h2>
     <dl>
       <dt>8.8</dt>
       <dd>Added Show hidden feature</dd>
+      <dd>Fixed an issue with sync (#99)</dd>
       <dd>Updated code to process duplicate hostname:port (#33, #76)</dd>
-      <dd>Updated sync process (#99)</dd>
       <dd>Updated user interface to hide patterns on FoxyProxy Basic</dd>
 
       <dt>8.7</dt>
@@ -106,7 +106,7 @@
       <dd>Updated User Interface</dd>
     </dl>
 
-    <h1 id="credits">Credits</h1>
+    <h2 id="credits">Credits</h2>
     <dl>
 
       <dt>Developer</dt>
