--- a/src/content/about.html
+++ b/src/content/about.html
@@ -16,6 +16,11 @@
 
     <h2 id="changelog">Changelog</h2>
     <dl>
+
+      <dt>8.9</dt>
+      <dd>Fixed proxy DNS in "Import Proxy List" (#102) (from 8.7)</dd>
+      <dd>Fixed settings upgrade when username/password is missing (#103)</dd>
+
       <dt>8.8</dt>
       <dd>Added Show hidden feature</dd>
       <dd>Fixed an issue with sync (#99)</dd>
