--- a/src/content/about.html
+++ b/src/content/about.html
@@ -18,8 +18,21 @@
     <dl>
 
       <dt>8.9</dt>
+      <dd>Added "Log" to the toolbar popup buttons (#44)</dd>
+      <dd>Added limited log display on Chrome (experimental)</dd>
+      <dd>Added Theme feature (#71, #100)</dd>
+      <dd>Added toggle more options on toolbar popup (#54)</dd>
       <dd>Fixed proxy DNS in "Import Proxy List" (#102) (from 8.7)</dd>
-      <dd>Fixed settings upgrade when username/password is missing (#103)</dd>
+      <dd>Fixed settings upgrade (import older) when hostname is missing (#108)</dd>
+      <dd>Fixed settings upgrade (import older) when username/password is missing (#103)</dd>
+      <dd>Increased log content</dd>
+      <dd>Removed "Show Pattern Proxy" option and made it default (#57) (from 8.7) (Firefox only)</dd>
+      <dd>Removed Tab Proxy page-action and set it to the toolbar icon (#114) (Firefox only)</dd>
+      <dd>Updated add pattern user interface (#105)</dd>
+      <dd>Updated code to process duplicate hostname:port (#33, #76)</dd>
+      <dd>Updated options to disable "Store Locally" on Firefox (Chrome only)</dd>
+      <dd>Updated popup include/exclude host feature</dd>
+      <dd>Updated popup user interface</dd>
 
       <dt>8.8</dt>
       <dd>Added Show hidden feature</dd>
@@ -31,7 +44,7 @@
       <dd>Added Auto Backup feature</dd>
       <dd>Added FoxyProxy Basic detection (disabled for now)</dd>
       <dd>Added Help translation form</dd>
-      <dd>Added option to show proxies on the toolbar badge when in Proxy by Patterns mode (Firefox only) (#57)</dd>
+      <dd>Added "Show Pattern Proxy" option to show proxies when in "Proxy by Patterns" mode (#57) (Firefox only)</dd>
       <dd>Added pattern matching to the Log display (#91)</dd>
       <dd>Added proxy title to the toolbar icon mouse-over title display (#74)</dd>
       <dd>Changed the global Proxy DNS to per-proxy setting (#75)</dd>
@@ -60,7 +73,7 @@
 
       <dt>8.3</dt>
       <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
-      <dd>Added locally stored PAC feature (#46) (experimental)</dd>
+      <dd>Added PAC "Store Locally" feature (#46) (experimental) (Chrome only)</dd>
       <dd>Added PAC view feature</dd>
       <dd>Fixed an issue with empty Global Exclude</dd>
       <dd>Fixed an issue with upgrade sync data on Firefox (#53)</dd>
