--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -26,25 +26,29 @@
           </label>
         </div>
 
-        <div class="host">
-          <input type="text" id="filter" spellcheck="false" placeholder="filter">
+        <details>
+          <summary data-i18n="more"></summary>
+          <div class="host">
+            <select class="local">
+              <option value="" disabled selected>&nbsp;</option>
+            </select>
 
-          <select class="local">
-            <option value="" disabled selected>&nbsp;</option>
-          </select>
+            <input type="text" id="filter" spellcheck="false" placeholder="filter">
 
-          <button type="button" class="local" data-i18n="quickAdd"></button>
-          <button type="button" class="firefox local" data-i18n="setTabProxy"></button>
+            <button type="button" class="local" data-i18n="quickAdd"></button>
+            <button type="button" class="local" data-i18n="excludeHost"></button>
+            <button type="button" class="firefox local" data-i18n="setTabProxy"></button>
+            <button type="button" class="firefox local" data-i18n="unsetTabProxy"></button>
+          </div>
+        </details>
 
-          <button type="button" class="local" data-i18n="excludeHost"></button>
-          <button type="button" class="firefox local" data-i18n="unsetTabProxy"></button>
-        </div>
-
-        <div class="buttons">
+        <div class="popup-buttons">
           <button type="button" data-i18n="options"></button>
           <button type="button" data-i18n="location"></button>
           <button type="button" data-i18n="ip"></button>
+          <button type="button" data-i18n="log"></button>
         </div>
+
 
         <!-- template -->
         <template>
