--- a/src/content/about.html
+++ b/src/content/about.html
@@ -25,6 +25,7 @@
       <dd>Fixed proxy DNS in "Import Proxy List" (#102) (from 8.7)</dd>
       <dd>Fixed settings upgrade (import older) when hostname is missing (#108)</dd>
       <dd>Fixed settings upgrade (import older) when username/password is missing (#103)</dd>
+      <dd>Fixed socks in "Import Proxy List" on some Firefox (#120)</dd>
       <dd>Increased log content</dd>
       <dd>Removed "Show Pattern Proxy" option and made it default (#57) (from 8.7) (Firefox only)</dd>
       <dd>Removed Tab Proxy page-action and set it to the toolbar icon (#114) (Firefox only)</dd>
