--- a/src/content/about.html
+++ b/src/content/about.html
@@ -16,6 +16,8 @@
 
     <h2 id="changelog">Changelog</h2>
     <dl>
+      <dt>8.10</dt>
+      <dd>Added new options to the proxy types</dd>
 
       <dt>8.9</dt>
       <dd>Added "Log" to the toolbar popup buttons (#44)</dd>
@@ -32,8 +34,8 @@
       <dd>Updated add pattern user interface (#105)</dd>
       <dd>Updated code to process duplicate hostname:port (#33, #76)</dd>
       <dd>Updated options to disable "Store Locally" on Firefox (Chrome only)</dd>
-      <dd>Updated popup include/exclude host feature</dd>
-      <dd>Updated popup user interface</dd>
+      <dd>Updated toolbar popup include/exclude host feature</dd>
+      <dd>Updated toolbar popup user interface</dd>
 
       <dt>8.8</dt>
       <dd>Added Show hidden feature</dd>
@@ -94,7 +96,7 @@
       <dd>Added Keyboard Shortcut feature</dd>
       <dd>Added pattern import/export</dd>
       <dd>Added port search to search filter</dd>
-      <dd>Added search filter to Toolbar popup (#23)</dd>
+      <dd>Added search filter to toolbar popup (#23)</dd>
       <dd>Fixed a pattern conversion issue (#28)</dd>
       <dd>Fixed an error in Sync (#36)</dd>
       <dd>Fixed Tab Proxy icon when reloading a tab (#33)</dd>
@@ -144,18 +146,29 @@
       <dd>zh_CN: <a href="https://github.com/wsxy162" target="_blank">FeralMeow </a></dd>
       <dd>zh_TW: <a href="https://github.com/samuikaze" target="_blank">samuikaze</a></dd>
 
+      <dt>Founder</dt>
+      <dd>
+        <img class="figure" src="../image/ericjung.png" alt=""><br>
+        <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>
+        Denver, Colorado, USA<br>
+        Founder & original developer<br>
+        CEO of <a href="https://getfoxyproxy.org/order/" target="_blank">getfoxyproxy.org</a>
+      </dd>
     </dl>
 
-
-    <p style="margin-top: 3em;">Please <a href="https://www.paypal.me/ericjung2/5.99" target="_blank">donate</a> or <a
-      href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries.<br>
-    <i>(including such remote places like <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion
-        Island</a>)</i></p>
-
-    <figure>
+    <!-- <figure>
       <img src="../image/ericjung.png" alt="">
-      <figcaption><a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Denver, Colorado, USA</figcaption>
-    </figure>
+      <figcaption><a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>
+        Denver, Colorado, USA<br>
+        Founder & original developer<br>
+        CEO of <a href="https://getfoxyproxy.org/order/" target="_blank">getfoxyproxy.org</a>
+      </figcaption>
+    </figure> -->
+
+    <p style="margin-top: 3em;">Please <a href="https://www.paypal.me/ericjung2/5.99" target="_blank">donate</a> or
+      <a href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries.<br>
+      <i>(including such remote places like <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion Island</a>)</i>
+    </p>
 
     <p style="font: 1.5em cursive;">Thank you for using FoxyProxy!</p>
     <img src="../image/logo.svg" style="width: 5em;" alt="">
