--- a/src/content/options.html
+++ b/src/content/options.html
@@ -196,11 +196,16 @@
                 <option value="socks4">SOCKS4</option>
                 <option value="socks5">SOCKS5</option>
                 <!-- <option value="quic">QUIC</option> -->
+                <option value="pac">PAC</option>
+                <option value="direct">DIRECT</option>
                 <option value="socks5">TOR</option>
                 <option value="socks5">Psiphon</option>
                 <option value="http">Privoxy</option>
-                <option value="pac">PAC</option>
-                <option value="direct">DIRECT</option>
+                <option value="socks5">v2rayA-socks5</option>
+                <option value="http">v2rayA-http</option>
+                <option value="http">v2rayA-http-rules</option>
+
+
               </select>
 
               <label data-i18n="port"></label>
