--- a/src/content/help.html
+++ b/src/content/help.html
@@ -697,7 +697,8 @@
 
 
     <h3>Restore Defaults</h3>
-    <p>Restore all settings to default values</p>
+    <p>Restore all FoxyProxy settings to default values</p>
+    <p class="note">Browser settings are not changed (e.g. previously set proxy values or Limit WebRTC).</p>
 
     <h3 id="import-export">Preferences: Import/Export</h3>
     <p>You can import/export Preferences (for backup or share) from/to a local file on your computer.</p>
