--- a/src/content/about.html
+++ b/src/content/about.html
@@ -151,19 +151,9 @@
         <img class="figure" src="../image/ericjung.png" alt=""><br>
         <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>
         Denver, Colorado, USA<br>
-        Founder & original developer<br>
-        CEO of <a href="https://getfoxyproxy.org/order/" target="_blank">getfoxyproxy.org</a>
+        Developer
       </dd>
     </dl>
-
-    <!-- <figure>
-      <img src="../image/ericjung.png" alt="">
-      <figcaption><a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>
-        Denver, Colorado, USA<br>
-        Founder & original developer<br>
-        CEO of <a href="https://getfoxyproxy.org/order/" target="_blank">getfoxyproxy.org</a>
-      </figcaption>
-    </figure> -->
 
     <p style="margin-top: 3em;">Please <a href="https://www.paypal.me/ericjung2/5.99" target="_blank">donate</a> or
       <a href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries.<br>
