--- a/src/content/about.html
+++ b/src/content/about.html
@@ -159,7 +159,7 @@
       <dt>Founder</dt>
       <dd>
         <img class="figure" src="../image/ericjung.png" alt=""><br>
-        <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>
+        <a href="mailto:eric.jung@getfoxyproxy.org" target="_blank">Eric H. Jung</a><br>
         Denver, Colorado, USA<br>
         Developer
       </dd>
